add public api to get user details
