# src/controllers/user_controller.rs
@@ -1,14 +1,17 @@
 use crate::{
+  repository::UserRepo,
   requests::{
-    ChangeAvatarRequest, ChangeUsernameRequest, ExtraRequests, UserInfoUpdateRequest,
-    UserUpdateRequest,
+    ChangeAvatarRequest, ChangeUsernameRequest, ExtraRequests, UserDetailPath,
+    UserInfoUpdateRequest, UserUpdateRequest,
   },
+  response::UserDetail,
   services::UserService,
-  DbPool, IError,
+  utils::db::get_db_conn,
+  DbConn, DbPool, IError,
 };
 use actix_multipart::form::MultipartForm;
 use actix_web::{
-  post, put,
+  get, post, put,
   web::{self, Json},
   HttpRequest, Responder,
 };
@@ -92,7 +95,7 @@ pub async fn change_avatar(
 #[utoipa::path(
   tag = "User",
   responses(
-    (status = 200, description = "success", body = UserDetailResponse),
+    (status = 200, description = "success", body = UserDetail),
   ),
   security(
     ("bearer_token" = [])
@@ -110,5 +113,32 @@ pub async fn update_user_infos(
   let infos = payload.into_inner();
   let mut user_service = UserService { pool, auth };
   let res = user_service.update_user_info(infos).await?;
+  Ok(Json(res))
+}
+
+/// get user detail for public api
+#[utoipa::path(
+  get,
+  tag = "User",
+  path = "/user/{username}",
+  params(
+      ("username" = String, Path, description = "Username of the user", example = "johndoe"),
+  ),
+  responses(
+    (status = 200, description = "success", body = UserDetail),
+  ),
+)]
+pub async fn get_user_detail(
+  path: web::Path<UserDetailPath>,
+  pool: web::Data<DbPool>,
+) -> Result<impl Responder, IError> {
+  // validate request
+  let conn: &mut DbConn = &mut get_db_conn(&pool).await?;
+  let user = UserRepo::get_user_by_username(conn, &path.username).await?;
+  let user_infos = user.infos(conn).await?;
+  let res = UserDetail {
+    user,
+    infos: user_infos,
+  };
   Ok(Json(res))
 }
