# src/requests/user_detail_path.rs
@@ -1,0 +1,4 @@
+#[derive(serde::Deserialize)]
+pub struct UserDetailPath {
+  pub username: String,
+}
