# web/src/swaggers/api.swagger.json
@@ -198,7 +198,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/UserDetailResponse"
+                  "$ref": "#/components/schemas/UserDetail"
                 }
               }
             }
@@ -246,6 +246,39 @@
             "bearer_token": []
           }
         ]
+      }
+    },
+    "/user/{username}": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "summary": "get user detail for public api",
+        "operationId": "get_user_detail",
+        "parameters": [
+          {
+            "name": "username",
+            "in": "path",
+            "description": "Username of the user",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "example": "johndoe"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserDetail"
+                }
+              }
+            }
+          }
+        }
       }
     }
   },
